<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:onClick="onAddButtonClick"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menuTaskStatus"
        android:title="@string/menu_task_title"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/menuTaskAll"
                android:title="@string/menu_task_all"
                app:showAsAction="never"/>

            <item
                android:id="@+id/menuTaskComplete"
                android:title="@string/menu_task_complete"
                app:showAsAction="never"/>

            <item
                android:id="@+id/menuTaskIncomplete"
                android:title="@string/menu_task_incomplete"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>